# japtools

./: .eslintignore  .gitguardian.yaml  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  bun.lockb  docker-compose.yml  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  turbo.json  vite-profile.cpuprofile  vite.config.js.timestamp-1661598878540.mjs  wrangler.toml
.cargo/: config.toml
.github/workflows/: workers_deployment.yml
apps/app/: package.json  tauri.conf.json
apps/japtools-tauri/: package.json
apps/japtools-web/: package.json  postcss.config.cjs  tailwind.config.cjs
apps/web/: .eslintignore  .gitignore  .prettierignore  package.json  svelte.config.js  tsconfig.json
apps/web/src/: app.postcss
docker_volume/postgre/: postmaster.pid
docker_volume/postgre/global/: 1260  pg_control  pg_internal.init
prisma/: .gitignore  rsclient.prisma  schema.prisma
prisma/migrations/20220919163005_init/: migration.sql
prisma/migrations/20220922090957_add_total_completed_field/: migration.sql
prisma/migrations/20220922122922_add_meanings_to_index/: migration.sql
project-setup-rs/: .gitignore  Cargo.toml
project-setup-rs/src/: db.rs  loader.rs  main.rs  upload.rs
scripts/: build_src.ts  get_root.ts  run.ts  script_util.ts  setup.ts  validate_json.ts
src/: app.d.ts  app.postcss  hooks.server.ts
src-tauri/: tauri.conf.json
src/lib/components/: pretty_obj.svelte
src/routes/: +layout.svelte  +page.svelte  __layout.svelte  auth_page.svelte  lessons.svelte
(+125 files in other folders)
