[package]
name = "project-setup-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
indicatif = "0.17.0"
itertools = "0.10.0"
project-root = "0.2.2"
reqwest = "0.11.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
