[package]
name = "project-setup-rs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
indicatif = "0.17.0"
itertools = "0.10.0"
project-root = "0.2.2"
reqwest = "0.11.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.0" }
tokio-stream = "0.1.9"
futures-util = "0.3.24"
cuid = "1.2.0"
